--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "transliterate",
+  "name": "heb-transliterate",
   "version": "1.0.0",
-  "description": "",
+  "description": "Transliterates text from English to Hebrew",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/polyfill": "^7.4.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.4"
-  }
+  "author": "Daniel Gendelman",
+  "repository": "gendeld/heb-transliterate",
+  "license": "MIT",
+  "keywords": [
+    "transliteration",
+    "hebrew",
+    "package",
+    "npm",
+    "javascript"
+  ]
 }
